condor_on_k8s/12_htcondor-worker-gpu.yaml
# Implemented as a StatefulSet so we can have a volume mount per pod,
# since we want to have per-pod/per-worker scratch space.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: illume-work-gpu
  namespace: illume
spec:
  replicas: 1
  # we can handle parallel deployment
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: illume-work
      kind: gpu
  serviceName: "illume-work"
  template:
    metadata:
      labels:
        app: illume-work
        kind: gpu
      # we need this to make Singularity work: (more privileges)
      annotations:
        container.apparmor.security.beta.kubernetes.io/work: unconfined
    spec:
      containers:
      - name: work
        image: illumecluster/htcondor-worker:latest
        resources:
          requests:
            memory: "24Gi"    # 6GiB of memory per core
            cpu: "4000m"      # 4 full CPU cores
            nvidia.com/gpu: 4 # request 4 GPUs (one CPU core per GPU)
          limits:
            memory: "24Gi"    # 6GiB of memory per core
            cpu: "4000m"      # 4 full CPU cores
            nvidia.com/gpu: 4 # request 4 GPUs (one CPU core per GPU)
        # we need this to make Singularity work: (more privileges)
        securityContext:
          capabilities:
            add:
              - SYS_ADMIN
        volumeMounts:
          - name: pool-password
            mountPath: /etc/condor/pool_password
          - name: homedir
            mountPath: /home
            subPath: illume/home
          - name: cvmfs
            mountPath: /cvmfs
          - name: scratch
            mountPath: /scratch
        ports:
        - containerPort: 9618
          protocol: TCP
      volumes:
      - name: pool-password
        secret:
          defaultMode: 0600
          secretName: htcondor-pool-password
      - name: homedir
        nfs:
          server: 192.168.19.2
          path: "/mnt/tank/export/scratch/icecube"
      - name: cvmfs
        hostPath:
          path: "/cvmfs"
  volumeClaimTemplates:
  # provision 400GiB of scratch storage per worker
  - metadata:
      name: scratch
      namespace: illume
    spec:
      storageClassName: rook-block
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 400Gi
