condor_on_k8s/13_htcondor-worker-nogpu-large.yaml
# Implemented as a StatefulSet so we can have a volume mount per pod,
# since we want to have per-pod/per-worker scratch space.
# TODO: we got rid of the volume mounts - this doe snot need to be a StatefulSet
# anymore - revert to Deployment?
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: illume-work-nogpu-large
  namespace: illume
spec:
  replicas: 0
  # we can handle parallel deployment
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: illume-work
      kind: nogpu-large
  serviceName: "illume-work"
  template:
    metadata:
      labels:
        app: illume-work
        kind: nogpu-large
      # we need this to make Singularity work: (more privileges)
      annotations:
        container.apparmor.security.beta.kubernetes.io/work: unconfined
    spec:
      containers:
      - name: scratch-loopback
        image: ubuntu:16.04
        command: ["/bin/sh"]
        args: ["-c", "mount -o loop /scratch/scratch.img /scratch/scratch_loop && /bin/sleep infinity"]
        lifecycle:
          preStop:
            exec:
              # Do a lazy unmount of the loopback /scratch we created in the initContainer.
              command: ["/bin/umount","-l","/scratch"]
        securityContext:
          privileged: true
        volumeMounts:
          - name: scratch
            mountPath: /scratch
            mountPropagation: Bidirectional
      - name: work
        image: illumecluster/htcondor-worker:20200528
        resources:
          requests:
            memory: "96Gi"    # 16GiB of memory per core
            cpu: "4000m"      # 4 CPU cores
            # ephemeral-storage: "30Gi" # this is everything except for scratch
          limits:
            memory: "96Gi"    # 16GiB of memory per core
            cpu: "6000m"      # 6 CPU cores (burst)
            # ephemeral-storage: "30Gi" # this is everything except for scratch
        # we need this to make Singularity work: (more privileges)
        securityContext:
          capabilities:
            add:
              - SYS_ADMIN
        volumeMounts:
          - name: pool-password
            mountPath: /etc/condor/pool_password
          - name: homedir
            mountPath: /home
            subPath: illume/home
          - name: cvmfs
            mountPath: /cvmfs
          - name: scratch
            mountPath: /scratch
            subPath: scratch_loop
          - name: datadir
            mountPath: /data
          - name: datadir2
            mountPath: /data2
        ports:
        - containerPort: 9618
          protocol: TCP
      volumes:
      - name: pool-password
        secret:
          defaultMode: 0600
          secretName: htcondor-pool-password
      - name: homedir
        nfs:
          server: 192.168.19.2
          path: "/mnt/tank/export/scratch/icecube"
      - name: datadir
        nfs:
          server: 192.168.19.6
          path: "/mnt/tank/export/scratch/icecube"
      - name: datadir2
        nfs:
          server: 192.168.19.3
          path: "/mnt/tank/export/scratch/icecube"			  
      - name: cvmfs
        hostPath:
          path: "/cvmfs"
      - name: scratch
        emptyDir: {}
        #  sizeLimit: 600Gi
