condor_on_k8s/14_htcondor-worker-nogpu-small.yaml
# Implemented as a StatefulSet so we can have a volume mount per pod,
# since we want to have per-pod/per-worker scratch space.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: illume-work-nogpu-small
  namespace: illume
spec:
  replicas: 1
  # we can handle parallel deployment
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: illume-work
      kind: nogpu-small
  serviceName: "illume-work"
  template:
    metadata:
      labels:
        app: illume-work
        kind: nogpu-small
      # we need this to make Singularity work: (more privileges)
      annotations:
        container.apparmor.security.beta.kubernetes.io/work: unconfined
    spec:
      containers:
      - name: scratch-loopback
        image: ubuntu:16.04
        resources:
          requests:
            memory: "10Mi"
            cpu: "10m"
            # ephemeral-storage: "10Mi"
          limits:
            memory: "10Mi"
            cpu: "10m"
            # ephemeral-storage: "10Mi"
        command: ["/bin/sh"]
        args: ["-c", "mount -o loop /scratch/scratch.img /scratch/scratch_loop && /bin/sleep infinity"]
        lifecycle:
          preStop:
            exec:
              # Do a lazy unmount of the loopback /scratch we created in the initContainer.
              command: ["/bin/umount","-l","/scratch"]
        securityContext:
          privileged: true
        volumeMounts:
          - name: scratch
            mountPath: /scratch
            mountPropagation: Bidirectional
      - name: work
        image: illumecluster/htcondor-worker:latest
        resources:
          requests:
            memory: "8Gi"     # 8GiB of memory per core
            cpu: "1000m"      # 1 CPU core
            # ephemeral-storage: "30Gi" # this is everything except for scratch
          limits:
            memory: "8Gi"     # 8GiB of memory per core
            cpu: "1000m"      # 1 CPU core
            # ephemeral-storage: "30Gi" # this is everything except for scratch
        # we need this to make Singularity work: (more privileges)
        securityContext:
          capabilities:
            add:
              - SYS_ADMIN
        volumeMounts:
          - name: pool-password
            mountPath: /etc/condor/pool_password
          - name: homedir
            mountPath: /home
            subPath: illume/home
          - name: cvmfs
            mountPath: /cvmfs
          - name: scratch
            mountPath: /scratch
            subPath: scratch_loop
          - name: datadir
            mountPath: /data
        ports:
        - containerPort: 9618
          protocol: TCP
      volumes:
      - name: pool-password
        secret:
          defaultMode: 0600
          secretName: htcondor-pool-password
      - name: homedir
        nfs:
          server: 192.168.19.2
          path: "/mnt/tank/export/scratch/icecube"
      - name: datadir
        nfs:
          server: 192.168.19.6
          path: "/mnt/tank/export/scratch/icecube"
      - name: cvmfs
        hostPath:
          path: "/cvmfs"
      - name: scratch
        emptyDir: {}
          #sizeLimit: 100Gi
