condor_on_k8s/07_htcondor-master.yaml
#!/usr/bin/env kubectl apply -f
apiVersion: v1
kind: Service
metadata:
  name: illume-coll
  namespace: illume
  labels:
    name: illume-coll
spec:
  ports:
    - port: 9618
  selector:
    app: illume-coll
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: illume-coll
  namespace: illume
  labels:
    app: illume-coll
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: illume-coll
  template:
    metadata:
      labels:
        app: illume-coll
    spec:
      containers:
      - name: coll
        image: illumecluster/htcondor-collector:latest
        resources:
          requests:
            memory: "1.0Gi"
            cpu: "1000m"
            ephemeral-storage: "10Gi"
          limits:
            memory: "1.0Gi"
            cpu: "1000m"
            ephemeral-storage: "10Gi"
        volumeMounts:
          - name: pool-password
            mountPath: /etc/condor/pool_password
        ports:
        - containerPort: 9618
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - /usr/local/bin/htcondor-collector-liveness
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 5
      volumes:
      - name: pool-password
        secret:
          defaultMode: 0600
          secretName: htcondor-pool-password
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: illume-neg
  namespace: illume
  labels:
    app: illume-neg
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: illume-neg
  template:
    metadata:
      labels:
        app: illume-neg
    spec:
      containers:
      - name: neg
        image: illumecluster/htcondor-negotiator:latest
        resources:
          requests:
            memory: "1.0Gi"
            cpu: "1000m"
            ephemeral-storage: "10Gi"
          limits:
            memory: "1.0Gi"
            cpu: "1000m"
            ephemeral-storage: "10Gi"
        volumeMounts:
          - name: pool-password
            mountPath: /etc/condor/pool_password
        ports:
        - containerPort: 9618
          protocol: TCP
      volumes:
      - name: pool-password
        secret:
          defaultMode: 0600
          secretName: htcondor-pool-password
