condor_on_k8s/10_htcondor-worker.yaml
#!/usr/bin/env kubectl apply -f
apiVersion: v1
kind: Service
metadata:
  name: htcondor-worker
  namespace: illume
  labels:
    app: htcondor-worker
spec:
  clusterIP: None
  selector:
    app: htcondor-worker
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: htcondor-worker
  namespace: illume
spec:
  replicas: 1
  # we can handle parallel deployment
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: htcondor-worker
  serviceName: "htcondor-worker"
  template:
    metadata:
      labels:
        app: htcondor-worker
      # we need this to make Singularity work: (more privileges)
      annotations:
        container.apparmor.security.beta.kubernetes.io/htcondor-worker: unconfined
    spec:
      containers:
      - name: htcondor-worker
        image: illumecluster/htcondor-worker:latest
        resources:
          requests:
            memory: "6Gi"
            cpu: "1000m"
          limits:
            memory: "6Gi"
            cpu: "1000m"
        # we need this to make Singularity work: (more privileges)
        securityContext:
          capabilities:
            add:
              - SYS_ADMIN
        volumeMounts:
          - name: pool-password
            mountPath: /etc/condor/pool_password
          - name: homedir
            mountPath: /home
            subPath: illume/home
          - name: cvmfs
            mountPath: /cvmfs
          - name: scratch
            mountPath: /scratch
        ports:
        - containerPort: 9618
          protocol: TCP
      volumes:
      - name: pool-password
        secret:
          defaultMode: 0600
          secretName: htcondor-pool-password
      - name: homedir
        nfs:
          server: 192.168.19.2
          path: "/mnt/tank/export/scratch/icecube"
      - name: cvmfs
        hostPath:
          path: "/cvmfs"
  volumeClaimTemplates:
  # provision 400GiB of scratch storage per worker
  - metadata:
      name: scratch
      namespace: illume
    spec:
      storageClassName: rook-block
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 400Gi
