condor_on_k8s/02_networkpolicies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-namespace-illume
  namespace: illume
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: illume
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            name: illume
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-access
  namespace: illume
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
    ports:
    - protocol: UDP
      port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-public-internet
  namespace: illume
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
          cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8     # RFC1918 block 1
            - 172.16.0.0/12  # RFC1918 block 2
            - 192.168.0.0/16 # RFC1918 block 3
            - 169.254.0.0/16 # link-local
            - 224.0.0.0/24   # multicast
